# deepLoopCloser

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cnn_vtl_example.py  requirements-gpu.txt  requirements.txt  setup-gpu.sh  setup.sh  train-sdav-example-small.sh  train-sdav-example.sh  train-sdav.py  train.py
Dataset/dataset_1/: outdoor_kennedylong_000000.ppm  outdoor_kennedylong_000014.ppm  outdoor_kennedylong_000022.ppm  outdoor_kennedylong_000024.ppm  outdoor_kennedylong_000025.ppm  outdoor_kennedylong_000026.ppm  outdoor_kennedylong_000028.ppm  outdoor_kennedylong_000029.ppm  outdoor_kennedylong_000031.ppm  outdoor_kennedylong_000032.ppm  outdoor_kennedylong_000033.ppm  outdoor_kennedylong_000034.ppm  outdoor_kennedylong_000038.ppm  outdoor_kennedylong_000039.ppm  outdoor_kennedylong_000040.ppm  outdoor_kennedylong_000041.ppm  outdoor_kennedylong_000042.ppm  outdoor_kennedylong_000044.ppm  outdoor_kennedylong_000046.ppm  outdoor_kennedylong_000047.ppm  outdoor_kennedylong_000048.ppm  outdoor_kennedylong_000049.ppm  outdoor_kennedylong_000050.ppm  outdoor_kennedylong_000052.ppm  outdoor_kennedylong_000057.ppm  outdoor_kennedylong_000058.ppm  outdoor_kennedylong_000060.ppm  outdoor_kennedylong_000062.ppm  outdoor_kennedylong_000063.ppm  outdoor_kennedylong_000064.ppm  outdoor_kennedylong_000068.ppm  outdoor_kennedylong_000071.ppm  outdoor_kennedylong_000073.ppm  outdoor_kennedylong_000074.ppm  outdoor_kennedylong_000077.ppm  outdoor_kennedylong_000079.ppm  outdoor_kennedylong_000082.ppm  outdoor_kennedylong_000083.ppm  outdoor_kennedylong_000084.ppm  outdoor_kennedylong_000086.ppm  (+249 more)
Dataset/dataset_2/: outdoor_kennedylong_000551.ppm  outdoor_kennedylong_000552.ppm  outdoor_kennedylong_000555.ppm  outdoor_kennedylong_000562.ppm  outdoor_kennedylong_000563.ppm  outdoor_kennedylong_000566.ppm  outdoor_kennedylong_000567.ppm  outdoor_kennedylong_000569.ppm  outdoor_kennedylong_000571.ppm  outdoor_kennedylong_000576.ppm  outdoor_kennedylong_000577.ppm  outdoor_kennedylong_000578.ppm  outdoor_kennedylong_000579.ppm  outdoor_kennedylong_000581.ppm  outdoor_kennedylong_000582.ppm  outdoor_kennedylong_000588.ppm  outdoor_kennedylong_000593.ppm  outdoor_kennedylong_000599.ppm  outdoor_kennedylong_000602.ppm  outdoor_kennedylong_000604.ppm  outdoor_kennedylong_000605.ppm  outdoor_kennedylong_000606.ppm  outdoor_kennedylong_000608.ppm  outdoor_kennedylong_000609.ppm  outdoor_kennedylong_000610.ppm  outdoor_kennedylong_000613.ppm  outdoor_kennedylong_000614.ppm  outdoor_kennedylong_000615.ppm  outdoor_kennedylong_000617.ppm  outdoor_kennedylong_000618.ppm  outdoor_kennedylong_000619.ppm  outdoor_kennedylong_000623.ppm  outdoor_kennedylong_000624.ppm  outdoor_kennedylong_000625.ppm  outdoor_kennedylong_000626.ppm  outdoor_kennedylong_000627.ppm  outdoor_kennedylong_000628.ppm  outdoor_kennedylong_000631.ppm  outdoor_kennedylong_000632.ppm  outdoor_kennedylong_000633.ppm  (+241 more)
Dataset/outdoor_kennedylong/: outdoor_kennedylong_000004.ppm  outdoor_kennedylong_000013.ppm  outdoor_kennedylong_000017.ppm  outdoor_kennedylong_000020.ppm  outdoor_kennedylong_000021.ppm  outdoor_kennedylong_000037.ppm  outdoor_kennedylong_000045.ppm  outdoor_kennedylong_000053.ppm  outdoor_kennedylong_000054.ppm  outdoor_kennedylong_000056.ppm  outdoor_kennedylong_000059.ppm  outdoor_kennedylong_000061.ppm  outdoor_kennedylong_000065.ppm  outdoor_kennedylong_000066.ppm  outdoor_kennedylong_000069.ppm  outdoor_kennedylong_000076.ppm  outdoor_kennedylong_000078.ppm  outdoor_kennedylong_000081.ppm  outdoor_kennedylong_000085.ppm  outdoor_kennedylong_000088.ppm  outdoor_kennedylong_000096.ppm  outdoor_kennedylong_000105.ppm  outdoor_kennedylong_000113.ppm  outdoor_kennedylong_000115.ppm  outdoor_kennedylong_000118.ppm  outdoor_kennedylong_000123.ppm  outdoor_kennedylong_000130.ppm  outdoor_kennedylong_000135.ppm  outdoor_kennedylong_000137.ppm  outdoor_kennedylong_000141.ppm  outdoor_kennedylong_000144.ppm  outdoor_kennedylong_000146.ppm  outdoor_kennedylong_000148.ppm  outdoor_kennedylong_000153.ppm  outdoor_kennedylong_000162.ppm  outdoor_kennedylong_000170.ppm  outdoor_kennedylong_000172.ppm  outdoor_kennedylong_000173.ppm  outdoor_kennedylong_000177.ppm  outdoor_kennedylong_000179.ppm  (+208 more)
datasets/outdoor_kennedylong/: outdoor_kennedylong_000012.ppm  outdoor_kennedylong_000018.ppm  outdoor_kennedylong_000023.ppm  outdoor_kennedylong_000027.ppm  outdoor_kennedylong_000030.ppm  outdoor_kennedylong_000035.ppm  outdoor_kennedylong_000036.ppm  outdoor_kennedylong_000043.ppm  outdoor_kennedylong_000051.ppm  outdoor_kennedylong_000055.ppm  outdoor_kennedylong_000067.ppm  outdoor_kennedylong_000070.ppm  outdoor_kennedylong_000072.ppm  outdoor_kennedylong_000075.ppm  outdoor_kennedylong_000080.ppm  outdoor_kennedylong_000093.ppm  outdoor_kennedylong_000099.ppm  outdoor_kennedylong_000102.ppm  outdoor_kennedylong_000110.ppm  outdoor_kennedylong_000114.ppm  outdoor_kennedylong_000116.ppm  outdoor_kennedylong_000119.ppm  outdoor_kennedylong_000124.ppm  outdoor_kennedylong_000125.ppm  outdoor_kennedylong_000126.ppm  outdoor_kennedylong_000127.ppm  outdoor_kennedylong_000132.ppm  outdoor_kennedylong_000133.ppm  outdoor_kennedylong_000134.ppm  outdoor_kennedylong_000136.ppm  outdoor_kennedylong_000140.ppm  outdoor_kennedylong_000142.ppm  outdoor_kennedylong_000143.ppm  outdoor_kennedylong_000149.ppm  outdoor_kennedylong_000151.ppm  outdoor_kennedylong_000154.ppm  outdoor_kennedylong_000155.ppm  outdoor_kennedylong_000158.ppm  outdoor_kennedylong_000159.ppm  outdoor_kennedylong_000165.ppm  (+192 more)
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/: __init__.py
src/perceptual_hash_loop_closer/: CMakeLists.txt  package.xml
src/perceptual_hash_loop_closer/src/: camera_simulator_node.cpp  loop_closer_node.cpp  time_stamp_node.cpp
test/: TensorflowWrapperTest.py
(+87 files in other folders)
